--- a/templates/component.hbs
+++ b/templates/component.hbs
@@ -7,7 +7,7 @@ import styles from './{{ componentName }}.module.scss';
 
 {{/if}}
 export const {{ componentName }} = (props: {{ componentName }}Props) => {
-  return <div{{#if style}} className={{ append '{' }}styles.{{ camelCase componentName }}{{ append '}' }}{{/if}} {...props} />;
+  return <{{ componentElement }}{{#if style}} className={{ append '{' }}styles.{{ camelCase componentName }}{{ append '}' }}{{/if}} {...props} />;
 }
 
 export default {{ componentName }};
